Cleanup long term preservation validation it test (#6895)
* Remove explicit array creation

* Replace Arrays.asList() with List.of()